--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost/db_blogpessoalitau?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
 spring.datasource.username=root
-spring.datasource.password=M@3xim975
-server.port=65535
+spring.datasource.password=ma3xim975
+server.port=3306
 
 spring.jpa.show-sql=true
 
