--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost/db_blogpessoalitau?createDatabaseIfNotExist=true&serverTimezone=America/Sao_Paulo&useSSl=false
-spring.datasource.username=root
-spring.datasource.password=ma3xim975
-server.port=3306
+spring.profiles.active=prod
 
-spring.jpa.show-sql=true
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=Brazil/East
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.swagger-ui.use-root-path=true
+springdoc.packagesToScan=com.blogPessoalItau.controller
